<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundstar3"
    tools:context=".Loginactivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A3323063"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/roundshape1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="50dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="top"
        android:background="#00E6E4EC"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SIGN_IN"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/customedittext"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/Username"
        android:inputType="text"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/customedittext"
        android:hint="@string/Password"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/img_btn_showPasswordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        android:layout_marginEnd="10dp"
        android:background="@drawable/baseline_visibility_24"/>

    <CheckBox
        android:id="@+id/checkboxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/Remember_Me"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="serif"
        android:background="@drawable/roundshape2"
        android:text="@string/btn_SignIn"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxRememberMe" />

    <!--google-->
<!--    <Button-->
<!--        android:id="@+id/buttongg"-->
<!--        style="@style/Widget.MaterialComponents.Button.Icon"-->
<!--        android:backgroundTint="#4B120E0E"-->
<!--        app:icon="@drawable/icongg30"-->
<!--        app:iconPadding="8dp"-->
<!--        app:iconSize="30dp"-->
<!--        android:text="@string/Continue_with_google"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginStart="55dp"-->
<!--        android:layout_marginTop="45dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />-->

</androidx.constraintlayout.widget.ConstraintLayout>