<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboardbackground"
    tools:layout_editor_absoluteX="-98dp"
    tools:layout_editor_absoluteY="-371dp">\

<!--    <androidx.viewpager2.widget.ViewPager2-->
<!--        android:id="@+id/viewPager2Main"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="84dp"
        android:layout_height="160dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/retangle7"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/day3"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/temp3"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/hum3"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp3"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="84dp"
        android:layout_height="160dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/retangle7"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/day2"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/temp2"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/hum2"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp2"
            tools:ignore="MissingConstraints" />







    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/sunday_nove"
        android:layout_width="305dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:gravity="top"
        android:shadowColor="#40000000"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:textColor="#EBDAF3"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coimbatore"
        android:layout_width="197dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="0sp"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunday_nove" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="300dp"
        android:layout_height="115dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-45sp"
        android:textColor="@color/white"
        android:textSize="79sp"
        app:layout_constraintEnd_toEndOf="@+id/coimbatore"
        app:layout_constraintStart_toStartOf="@+id/coimbatore"
        app:layout_constraintTop_toBottomOf="@+id/coimbatore"
        android:text="--"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rectangle1"
        android:layout_width="297dp"
        android:layout_height="129dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/retangle7"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="@+id/some_id"
        app:layout_constraintStart_toStartOf="@+id/some_id"
        app:layout_constraintTop_toBottomOf="@+id/some_id">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/img_humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="28dp"
            android:layout_height="29dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="132dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/img_rain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="29dp"
            android:layout_height="31dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="232dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/img_wind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtHumidity"
            style="@style/txtInterregular17"
            android:layout_width="52dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.71sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtRaifall"
            style="@style/txtInterregular17"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="52dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.71sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtWingspeed"
            style="@style/txtInterregular17"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="216dp"
            android:layout_marginTop="52dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.71sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Humidity"
            style="@style/txtInterregular17"
            android:layout_width="72dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/Humidity"
            android:translationY="-0.71sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Rainfall"
            style="@style/txtInterregular17"
            android:layout_width="69dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="112dp"
            android:layout_marginTop="88dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/Rainfall"
            android:translationY="-0.71sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Wingspeed"
            style="@style/txtInterregular17"
            android:layout_width="98dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="196dp"
            android:layout_marginTop="88dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/Wingspeed"
            android:translationY="-0.71sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="84dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/retangle7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle1"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/day1"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/temp1"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/hum1"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp1"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="84dp"
        android:layout_height="160dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/retangle7"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/day4"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/temp4"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day4"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/hum4"
            style="@style/txtInterregular17"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp4"
            tools:ignore="MissingConstraints" />





    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>